2009-07-11  Zoltan Varga  <vargaz@gmail.com>

	* runtime-invoke.cs: Convert it to use TestDriver. Add tests for
	ptr types.

2009-07-09  Mark Probst  <mark.probst@gmail.com>

	* generic-xdomain.2.cs: Test case for generic marshal-by-ref
	objects.

	* Makefile.am: Test added.

2009-06-29  Zoltan Varga  <vargaz@gmail.com>

	* generic-stack-traces.2.cs: Add a test for #509406.

	* dynamic-method-finalize.2.cs: New test.

2009-06-25  Mark Probst  <mark.probst@gmail.com>

	* appdomain-async-invoke.cs: Fail if BeginInvoke doesn't return an
	AsyncResult.

2009-06-25  Mark Probst  <mark.probst@gmail.com>

	* appdomain-async-invoke.cs: Test for adding async invokes while a
	domain is unloading.

	* Makefile.am: Test added.

2009-06-25  Sylvain Dupont <duposyl@gmail.com>

	* cominterop.cs libtest.c: Added tests for marshalling
	  out parameters of type SAFEARRAY[VARIANT].

	Code is contributed under MIT/X11 license.

2009-06-24  Zoltan Varga  <vargaz@gmail.com>

	* libtest.c make_imt_test.sh: Applied patch from Romain Tartiere 
	(romain@blogreen.org). Fix tests on freebsd.

2009-06-17  Zoltan Varga  <vargaz@gmail.com>

	* runtime-invoke.cs: Add test for sharing i8/u8 return values.

2009-06-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* load-exceptions.cs class.cs: Add regression test for #508487.

	* t-missing.cs: Add nested type.

2009-06-06  Gert Driesen  <drieseng@users.sourceforge.net>

	* bug-508538.cs: New regression test for bug #508538.

2009-06-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* load-exceptions.cs: Fix thiko.

2009-06-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* load-exceptions.cs: Test for #508532.

	* load-missing.il: Ditto.

2009-05-27  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am: Disable the test_messages test as it fails on the
	buildbot.

2009-05-17  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (test_messages): Fix the dependencies of this test.

2009-05-14  Zoltan Varga  <vargaz@gmail.com>
