@@ -1,3 +1,7 @@
+2009-07-23  Zoltan Varga  <vargaz@gmail.com>
+
+	* load-exceptions.cs: Add a test for #524498.
+
 2009-07-11  Zoltan Varga  <vargaz@gmail.com>
 
 	* runtime-invoke.cs: Convert it to use TestDriver. Add tests for
